@@ -1,3 +1,3 @@
-EBUILD abraca-9999.ebuild 855 SHA256 ae393237c15e1d5d5519e65aea7b1428ac59c79b1775605272fae0c6d67eae76 SHA512 616e43881c6280bd6ee15e5d1277f4a21dbd061c979e19a097b2244e7f740ff19de3578f6a83917b1c7629e78c4120449102e203c7684704bc5d732dfe4449fd WHIRLPOOL 1873338e7bc5d69cf405b987d643e14abb75412a07fd0bf78305ae8c82b69c7895e8f63e692bcfee22d25c0511e059609cc5292a919d384709d29df408ed97b4
-MISC ChangeLog 1486 SHA256 2fb0ab04df6200fc0c52a35dfd6b9a6e002dfd0efd0a0be5516711b601e14c2c SHA512 84edc9b00e0acf8f7ba712ce6fd0c4079f1f02dc6ced466ac7b263e2fd8448c2aecd8d8d8d60549e99dc395ac614dd891d4ce2c7888659f0af0df50b6c0312d1 WHIRLPOOL 5b9a0deb4ece57a400897804828cbad828ac5120c36434e171af2f30c6d35e04b8a5e23b00dd0f52d8097199be87ab1cef9a796f61599136f2990a70d827bd1e
+EBUILD abraca-9999.ebuild 571 SHA256 bafed1651cac8df273224ee97d1e61a45760a51011fe18154e7d3b7737a4267e SHA512 be1143682fa9d8fe604ced7e6d2c5678c62b37aac520993d42a9600a654da8f51af5d33e5e53bbad01c1bf5a2b6fb4e3c4614b8c67d9d601bc4b7e61a4a88aa1 WHIRLPOOL c598d54048c6011a211e8e19af24b494eea06f32e1140a99be055a26ee073a00d378617dde1085061d835202a3dc1c9bfb5a20e2899cd3d24e5197c2682dd279
+MISC ChangeLog 1647 SHA256 21bd582d054e08851082de28b905f5eca207ef744a2d56d16f7ff4c9372956d1 SHA512 c57874489160e4b1f4134a32176fcf61af7fcaaf1f4dfd318791a1edf717b4565346a9fb93a5615133f6815c45bd150c85240ded22f09e8e8790ead7c65320a2 WHIRLPOOL 1bf5a0996366b6ea4d622b8da021bbe1075d050b5bc486c3b388e38eb42e5528e5228a66bbfc20c8c917ccb53d0a6513d29791e2777896e8176e34b80f2b309c
 MISC metadata.xml 246 SHA256 f32f31abe9dcc1f9a5dc9b6a36996d773abd006d92c13c4df48f8d7d1061060f SHA512 327022589c637a14219eb603a62050fbb93b980f4693960c0ac4117b6b483d9f0d9fe1366d8e18227b34373a399aef339f49c16df8ca57b9ec870568a4d394f4 WHIRLPOOL e55381a9a9fd1d0efbe87da1c3aa302efdcf4734827f56273faeb55b17361c529518fcf16ac0946102e26165e8eedba81ab0cd07c7b08ce6bad001e944e43a0f
